Updated config to match in-use configuration.

--- a/configs/retrogame.cfg
+++ b/configs/retrogame.cfg
@@ -8,24 +8,13 @@
 # A '#' character indicates a comment to end-of-line.
 # File can be edited "live," no need to restart retrogame!
 
-# Here's a pin configuration for the PiGRRL 2 project:
-
-LEFT       4  # Joypad left
-RIGHT     19  # Joypad right
-UP        16  # Joypad up
-DOWN      26  # Joypad down
-LEFTCTRL  14  # 'A' button
-LEFTALT   15  # 'B' button
-Z         20  # 'X' button
-X         18  # 'Y' button
-SPACE      5  # 'Select' button
-ENTER      6  # 'Start' button
-A         12  # Left shoulder button
-S         13  # Right shoulder button
-ESC       17  # Exit ROM; PiTFT Button 1
-1         22  # PiTFT Button 2
-2         23  # PiTFT Button 3
-3         27  # PiTFT Button 4
+0         1   # This is here to allow usage of the keycode elsewhere
+1         16  # Gray   - Exit
+2         20  # Green  - Credit
+3         21  # Yellow -
+4         13  # Blue   -
+5         19  # Purple - Volume Up
+6         26  # Brown  - Volume Down
 
 # For configurations with few buttons (e.g. Cupcade), a key can be followed
 # by multiple pin numbers.  When those pins are all held for a few seconds,
